[metadata]
name = vsdpir
version = 1.1.0
author = HolyWu
description = DPIR function for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HolyWu/vs-dpir
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Video

[options]
zip_safe = False
packages = vsdpir
python_requires = >=3.6
install_requires =
    numpy
    requests
    torch
    tqdm

[options.package_data]
vsdpir = *.pth
